--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/afable/afable">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/afable/afable.github.io">View on GitHub</a>
 
           <h1 id="project_title">afable</h1>
           <h2 id="project_tagline">web portal</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/afable/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/afable/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/afable/afable.github.io/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/afable/afable.github.io/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
