--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>afable</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
   </head>
 
   <body>
@@ -27,41 +37,51 @@
             </section>
         </header>
     </div>
+    <!-- HEADER -->
+
+
+<section class="inner">
+<ul class="nav nav-pills">
+  <li role="presentation" class="active"><a href="#">Home</a></li>
+  <li role="presentation"><a href="#">Projects</a></li>
+</ul>
+</section>
+
+
+
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>I am a fourth year Computer Science student at the University of Victoria. I have a focus on Software Engineering, i.e. all aspects of the software development process. The University of Victoria, also known as UVic, is a medium sized public university in Victoria, British Columbia, Canada. You can visit <a href="http://www.uvic.ca/" target="_blank">UVic's website</a> or read more about UVic from its <a href="http://en.wikipedia.org/wiki/University_of_Victoria" target="_blank">Wikipedia article.</a></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+
+<h3>
+<a id="why-software-dev" class="anchor" href="#why-software-dev" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Software Dev?</h3>
+
+<p>What attracted me to software development was primarily game development. I've enjoyed playing games throughout my life but I've only recently experienced the joy of programming. I get excited creating clean and efficient code, so I'm always open to criticism or pointers. My goal is to incorporate education with a game interface that motivates users to learn and develop practical skills.</p>
+
+<pre><code>
+while ( alive() )
+{
+    make_games(♥);
+};
 </code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub. So we say.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Having trouble? Send me an <a href="mailto:afablee@gmail.com">email</a>. You can find me online at the following websites:
+<a href="https://github.com/afable" target="_blank">Github</a>,
+<a href="http://stackoverflow.com/users/911211/afable" target="_blank">Stack Overflow</a>,
+<a href="https://www.linkedin.com/pub/erik-afable/31/a32/176" target="_blank">LinkedIn</a>,
+and
+<a href="https://www.youtube.com/user/superafable/feed" target="_blank">Youtube</a>.
+</p>
+
       </section>
     </div>
 
