fixed home and projects url for index.html

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <section class="inner">
 <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="#">Home</a></li>
-  <li role="presentation"><a href="#">Projects</a></li>
+  <li role="presentation" class="active"><a href="http://afable.github.io/index.html">Home</a></li>
+  <li role="presentation"><a href="http://afable.github.io/projects.html">Projects</a></li>
 </ul>
 </section>
 
