updated responsive images

--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
                         <td><p>Mac OSX<br />Xcode 4<br />G++, GNU Make<br />C++, OpenGL, GLUT</p></td>
                         <td><p>A simple ray tracer that uses OpenGL to color in the resulting pixel color of each ray after all calculations (ambient, diffuse, specular values, reflection, and refraction) from the eye to the viewing window.
                         <br /><br />
-                        <img src="projects/ray_trace.png" />
+                        <img class="img-responsive" src="./images/projects/ray_trace.png" />
                         </p></td>
 					</tr>
                     <tr>
@@ -134,7 +134,7 @@
 						<td><p>2011-09-04</p></td>
                         <td><p>Mac OSX<br />Xcode 4<br />Apple LLVM<br />Objective-C</p></td>
                         <td><p>The final project of Programming in Objective-C by Stephen Kochan. I developed and tested the fractional calculator app in Xcode 4 using Xcode's iOS simulator. Unfortunately, I did not have a physical iPhone to test.<br /><br />
-                        <img src="projects/fracCalc.png" class="fracCalc"/></p></td>
+                        <img class="img-responsive" src="./images/projects/fracCalc.png"/></p></td>
 					</tr>
                     <tr>
 						<td><p>Random Movie Selector<br />
