--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
     <meta name="description" content="afable : web portal">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 
     <title>afable</title>
 
