added healthy tweets image

--- a/projects.html
+++ b/projects.html
@@ -101,6 +101,7 @@
 					</tr>
                     <tr>
 						<td><p>Extremely Fast File System<br />
+                        <a href="projects/effs_v3.tar.gz" target="_blank">Read Report</a></p></td>
                         <a href="projects/effs_v3.tar.gz" target="_blank">effs_v3.tar.gz</a></p></td>
 						<td><p>2011-12-02</p></td>
                         <td><p>Ubuntu 10.04<br />JEdit<br />GCC, GNU Make<br />C</p></td>
