--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 
 <p>What attracted me to software development was primarily game development. I've enjoyed playing games throughout my life but I've only recently experienced the joy of programming. I get excited creating clean and efficient code, so I'm always open to criticism or pointers. My goal is to incorporate education with a game interface that motivates users to learn and develop practical skills.</p>
 
-<pre><code>
-while ( alive() )
+<pre><code>while ( alive() )
 {
     make_games(♥);
 };
