made updates for this years orcajam! 2015 and added href links to all the project pictures since most people will probably click on the pictures

--- a/index.html
+++ b/index.html
@@ -1,109 +1,114 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="afable : web portal">
+<head>
+	<meta charset='utf-8'>
+	<meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<meta name="description" content="afable : web portal">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 	<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 
-    <title>afable</title>
+	<title>afable</title>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/afable/afable.github.io">View on GitHub</a>
+	<!-- HEADER -->
+	<div id="header_wrap" class="outer">
+		<header class="inner">
+			<a id="forkme_banner" href="https://github.com/afable/afable.github.io">View on GitHub</a>
 
-          <h1 id="project_title">afable</h1>
-          <h2 id="project_tagline">web portal</h2>
+			<h1 id="project_title">afable</h1>
+			<h2 id="project_tagline">web portal</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/afable/afable.github.io/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/afable/afable.github.io/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-    <!-- HEADER -->
-
-
-<section class="inner">
-<ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="http://afable.github.io/index.html">Home</a></li>
-  <li role="presentation"><a href="http://afable.github.io/projects.html">Projects</a></li>
-</ul>
-</section>
+			<section id="downloads">
+				<a class="zip_download_link" href="https://github.com/afable/afable.github.io/zipball/master">Download this project as a .zip file</a>
+				<a class="tar_download_link" href="https://github.com/afable/afable.github.io/tarball/master">Download this project as a tar.gz file</a>
+			</section>
+		</header>
+	</div>
+	<!-- HEADER -->
 
 
+	<section class="inner">
+		<ul class="nav nav-pills">
+			<li role="presentation" class="active"><a href="http://afable.github.io/index.html">Home</a></li>
+			<li role="presentation"><a href="http://afable.github.io/projects.html">Projects</a></li>
+		</ul>
+	</section>
 
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
+
+
+	<!-- MAIN CONTENT -->
+	<div id="main_content_wrap" class="outer">
+		<section id="main_content" class="inner">
+			<h3>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h3>
 
-<p>I am a fourth year Computer Science student at the University of Victoria. I have a focus on Software Engineering, i.e. all aspects of the software development process. The University of Victoria, also known as UVic, is a medium sized public university in Victoria, British Columbia, Canada. You can visit <a href="http://www.uvic.ca/" target="_blank">UVic's website</a> or read more about UVic from its <a href="http://en.wikipedia.org/wiki/University_of_Victoria" target="_blank">Wikipedia article.</a></p>
+			<p>I am a fourth year Computer Science student at the University of Victoria. I have a focus on Software Engineering, i.e.
+				all aspects of the software development process. The University of Victoria, also known as UVic, is a medium sized public
+				university in Victoria, British Columbia, Canada. You can visit <a href="http://www.uvic.ca/" target="_blank">UVic's website</a>				or read more about UVic from its <a href="http://en.wikipedia.org/wiki/University_of_Victoria" target="_blank">Wikipedia article.</a></p>
 
 
-<h3>
+			<h3>
 <a id="why-software-dev" class="anchor" href="#why-software-dev" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Software Dev?</h3>
 
-<p>What attracted me to software development was primarily game development. I've enjoyed playing games throughout my life but I've only recently experienced the joy of programming. I get excited creating clean and efficient code, so I'm always open to criticism or pointers. My goal is to incorporate education with a game interface that motivates users to learn and develop practical skills.</p>
+			<p>What attracted me to software development was primarily game development. I've enjoyed playing games throughout my life
+				but I've only recently experienced the joy of programming. I get excited creating clean and efficient code, so I'm always
+				open to criticism or pointers. My goal is to incorporate education with a game interface that motivates users to learn
+				and develop practical skills.</p>
 
-<pre><code>while ( alive() )
+			<pre><code>while ( alive() )
 {
     make_games(♥);
 };
 </code></pre>
 
-<h3>
+			<h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble? Send me an <a href="mailto:afablee@gmail.com">email</a>. You can find me online at the following websites:
-<a href="https://github.com/afable" target="_blank">Github</a>,
-<a href="http://stackoverflow.com/users/911211/afable" target="_blank">Stack Overflow</a>,
-<a href="https://www.linkedin.com/pub/erik-afable/31/a32/176" target="_blank">LinkedIn</a>,
-and
-<a href="https://www.youtube.com/user/superafable/feed" target="_blank">Youtube</a>.
-</p>
+			<p>Having trouble? Send me an <a href="mailto:afablee@gmail.com">email</a>. You can find me online at the following websites:
+				<a href="https://github.com/afable" target="_blank">Github</a>,
+				<a href="http://stackoverflow.com/users/911211/afable" target="_blank">Stack Overflow</a>,
+				<a href="https://www.linkedin.com/pub/erik-afable/31/a32/176" target="_blank">LinkedIn</a>, and
+				<a href="https://www.youtube.com/user/superafable/feed" target="_blank">Youtube</a>.
+			</p>
 
-      </section>
-    </div>
+		</section>
+	</div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">afable maintained by <a href="https://github.com/afable">afable</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
+	<!-- FOOTER  -->
+	<div id="footer_wrap" class="outer">
+		<footer class="inner">
+			<p class="copyright">afable maintained by <a href="https://github.com/afable">afable</a></p>
+			<p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+		</footer>
+	</div>
 
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+	<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
+	</script>
+	<script type="text/javascript">
+		try {
               var pageTracker = _gat._getTracker("UA-61562068-1");
             pageTracker._trackPageview();
             } catch(err) {}
-          </script>
+	</script>
 
 
-  </body>
+</body>
+
 </html>
