better understanding of orcajam

--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
 						</p>
 					</td>
 					<td>
-						<p>Our 48 hour game submission for OrcaJam! 2015! Was a fun experience learning Javascript for the first time.
+						<p>Our 48 hour game submission for OrcaJam! (2015) Was a fun experience learning Javascript for the first time.
 							<br />
 							<br />
 							<a <a href="http://fathomgame.github.io/" target="_blank">
@@ -124,7 +124,7 @@
 						</p>
 					</td>
 					<td>
-						<p>Game submission for OrcaJam! 2014! I gave game design advice and helped a bit with the art.
+						<p>Game submission for OrcaJam! (2014) I gave game design advice and helped a bit with the art.
 							<br />
 							<br />
 							<a <a href="http://snowballin.github.io/" target="_blank">
