--- a/index.html
+++ b/index.html
@@ -54,30 +54,22 @@
 	<!-- MAIN CONTENT -->
 	<div id="main_content_wrap" class="outer">
 		<section id="main_content" class="inner">
-			<h3>
-<a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h3>
+			<h3><a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Me</h3>
 
-			<p>I am a fourth year Computer Science student at the University of Victoria. I have a focus on Software Engineering, i.e.
-				all aspects of the software development process. The University of Victoria, also known as UVic, is a medium sized public
-				university in Victoria, British Columbia, Canada. You can visit <a href="http://www.uvic.ca/" target="_blank">UVic's website</a>				or read more about UVic from its <a href="http://en.wikipedia.org/wiki/University_of_Victoria" target="_blank">Wikipedia article.</a></p>
+			<p>I graduated from UVic in 2015 with a focus on Software Engineering and now I make games. :)</p>
 
+			<p>Software development interested me primarily because of game development. I've enjoyed playing games throughout my life
+				and now I get to share that passion with the world. Creating clean and efficient code excites me so I'm always open to
+				criticism. I want to educate people with a game interface that motivates learning and develops practical skills.</p>
 
-			<h3>
-<a id="why-software-dev" class="anchor" href="#why-software-dev" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why Software Dev?</h3>
+			<pre><code>
+	while ( alive() )	
+	{
+		make_games(♥);
+	};
+			</code></pre>
 
-			<p>What attracted me to software development was primarily game development. I've enjoyed playing games throughout my life
-				but I've only recently experienced the joy of programming. I get excited creating clean and efficient code, so I'm always
-				open to criticism or pointers. My goal is to incorporate education with a game interface that motivates users to learn
-				and develop practical skills.</p>
-
-			<pre><code>while ( alive() )
-{
-    make_games(♥);
-};
-</code></pre>
-
-			<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+			<h3><a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
 
 			<p>Having trouble? Send me an <a href="mailto:afablee@gmail.com">email</a>. You can find me online at the following websites:
 				<a href="https://github.com/afable" target="_blank">Github</a>,
