added jquery script resource and changed some headers

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -38,9 +39,8 @@
 			</section>
 		</header>
 	</div>
-	<!-- HEADER -->
 
-
+	<!--NAVIGATION-->
 	<section class="inner">
 		<ul class="nav nav-pills">
 			<li role="presentation" class="active"><a href="http://afable.github.io/index.html">Home</a></li>
