--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 		}
 		
 		.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
-			background-color: #000;
+			background-color: #ccf;
 		}
 		
 	</style>
