playing with cookiedata

--- a/Javascript9_cookies.htm
+++ b/Javascript9_cookies.htm
@@ -35,9 +35,9 @@
 			{
 				if ( (allCookies[i].indexOf(cookieName)) !== -1 )
 				{
-					var match = allCookies[i].replace(" ", "");
-					console.log(match);
-					cookieData = match.substr((cookieName.length+1));
+					// var match = allCookies[i].replace(" ", "");
+					// cookieData = match.substr((cookieName.length+1));
+					cookieData = allCookies;
 					console.log(cookieName, " ", cookieData);
 				}
 			}
