--- a/Javascript9_cookies.htm
+++ b/Javascript9_cookies.htm
@@ -26,7 +26,7 @@
 		
 		function getCookie(name)
 		{
-			console.log(allCookies);
+			console.log(document.cookie);
 			
 			// var cookieName = name.value
 			// var allCookies = document.cookie.split(";");
