print to console an array of all the cookies... easier to read

--- a/Javascript9_cookies.htm
+++ b/Javascript9_cookies.htm
@@ -26,7 +26,7 @@
 		
 		function getCookie(name)
 		{
-			console.log(document.cookie);
+			console.log(document.cookie.split(";"));
 			
 			// var cookieName = name.value
 			// var allCookies = document.cookie.split(";");
