--- a/index.htm
+++ b/index.htm
@@ -1,106 +1,50 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-	<meta charset='utf-8'>
-	<meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<meta name="description" content="afable : web portal">
-
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-	<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
-
-	<title>afable</title>
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
+	<meta charset="UTF-8" />
+	<title>a e</title>
+	<base href="" target="_blank" />
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<script src="js/main.js"></script>
 </head>
 
 <body>
-
-	<!-- HEADER -->
-	<div id="header_wrap" class="outer">
-		<header class="inner">
-			<a id="forkme_banner" href="https://github.com/afable/afable.github.io">View on GitHub</a>
-
-			<h1 id="project_title">afable</h1>
-			<h2 id="project_tagline">web portal</h2>
-
-			<section id="downloads">
-				<a class="zip_download_link" href="https://github.com/afable/afable.github.io/zipball/master">Download this project as a .zip file</a>
-				<a class="tar_download_link" href="https://github.com/afable/afable.github.io/tarball/master">Download this project as a tar.gz file</a>
-			</section>
-		</header>
+	<div id="wrapper">
+		<header>header</header>
+		<main id='main'>
+			<nav><a href="#">nav</a>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat. Cras risus felis, posuere vitae pellentesque
+					et, imperdiet non orci. Duis fringilla mi et risus luctus iaculis. Aliquam posuere congue neque, non ullamcorper ipsum
+					tincidunt ut. Etiam sed odio risus. Maecenas rhoncus felis quis augue molestie, quis commodo eros suscipit. Mauris hendrerit
+					magna ac mauris accumsan ultricies. Pellentesque tristique at turpis sed sollicitudin. Etiam ultrices faucibus blandit.
+					Nunc blandit nulla.
+				</p>
+			</nav>
+			<article>
+				<h2>article</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat. Cras risus felis, posuere vitae pellentesque
+					et, imperdiet non orci. Duis fringilla mi et risus luctus iaculis. Aliquam posuere congue neque, non ullamcorper ipsum
+					tincidunt ut. Etiam sed odio risus. Maecenas rhoncus felis quis augue molestie, quis commodo eros suscipit. Mauris hendrerit
+					magna ac mauris accumsan ultricies. Pellentesque tristique at turpis sed sollicitudin. Etiam ultrices faucibus blandit.
+					Nunc blandit nulla.
+				</p>
+			</article>
+			<aside>aside
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat. Cras risus felis, posuere vitae pellentesque
+					et, imperdiet non orci. Duis fringilla mi et risus luctus iaculis. Aliquam posuere congue neque, non ullamcorper ipsum
+					tincidunt ut. Etiam sed odio risus. Maecenas rhoncus felis quis augue molestie, quis commodo eros suscipit. Mauris hendrerit
+					magna ac mauris accumsan ultricies. Pellentesque tristique at turpis sed sollicitudin. Etiam ultrices faucibus blandit.
+					Nunc blandit nulla a arcu convallis pharetra.
+				</p>
+			</aside>
+		</main>
+		<footer>footer</footer>
 	</div>
-
-	<!--NAVIGATION-->
-	<section class="inner">
-		<ul class="nav nav-pills">
-			<li role="presentation" class="active"><a href="http://afable.github.io/index.html">Home</a></li>
-			<li role="presentation"><a href="http://afable.github.io/projects.html">Projects</a></li>
-		</ul>
-	</section>
-
-
-
-
-	<!-- MAIN CONTENT -->
-	<div id="main_content_wrap" class="outer">
-		<section id="main_content" class="inner">
-			<h3><a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Me</h3>
-
-			<p>I graduated from UVic in 2015 with a focus on Software Engineering and now I make games. :)</p>
-
-			<p>Software development interested me primarily because of game development. I've enjoyed playing games throughout my life
-				and now I get to share that passion with the world. Creating clean and efficient code excites me so I'm always open to
-				criticism. I want to educate people with a game interface that motivates learning and develops practical skills.</p>
-
-			<pre><code>
-	while ( alive() )	
-	{
-		make_games(♥);
-	};
-			</code></pre>
-
-			<h3><a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h3>
-
-			<p>Having trouble? Send me an <a href="mailto:afablee@gmail.com">email</a>. You can find me online at the following websites:
-				<a href="https://github.com/afable" target="_blank">Github</a>,
-				<a href="http://stackoverflow.com/users/911211/afable" target="_blank">Stack Overflow</a>,
-				<a href="https://www.linkedin.com/pub/erik-afable/31/a32/176" target="_blank">LinkedIn</a>, and
-				<a href="https://www.youtube.com/user/superafable/feed" target="_blank">Youtube</a>.
-			</p>
-
-		</section>
-	</div>
-
-	<!-- FOOTER  -->
-	<div id="footer_wrap" class="outer">
-		<footer class="inner">
-			<p class="copyright">afable maintained by <a href="https://github.com/afable">afable</a></p>
-			<p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-		</footer>
-	</div>
-
-	<script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-	<script type="text/javascript">
-		try {
-              var pageTracker = _gat._getTracker("UA-61562068-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-	</script>
-
-
 </body>
 
 </html>
