brought index.htm and stylesheet back down to the barebones. will need to go through a flex tutorial before continuing as playing around with flex had strange artefacts appear on mobile front-end (header/footer was different font-size than main's nav/article/aside)

--- a/index.htm
+++ b/index.htm
@@ -12,38 +12,49 @@
 
 <body>
 	<div id="wrapper">
-		<header>header</header>
-		<main id='main'>
-			<nav><a href="#">nav</a>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
-					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat. Cras risus felis, posuere vitae pellentesque
-					et, imperdiet non orci. Duis fringilla mi et risus luctus iaculis. Aliquam posuere congue neque, non ullamcorper ipsum
-					tincidunt ut. Etiam sed odio risus. Maecenas rhoncus felis quis augue molestie, quis commodo eros suscipit. Mauris hendrerit
-					magna ac mauris accumsan ultricies. Pellentesque tristique at turpis sed sollicitudin. Etiam ultrices faucibus blandit.
-					Nunc blandit nulla.
-				</p>
-			</nav>
-			<article>
-				<h2>article</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
-					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat. Cras risus felis, posuere vitae pellentesque
-					et, imperdiet non orci. Duis fringilla mi et risus luctus iaculis. Aliquam posuere congue neque, non ullamcorper ipsum
-					tincidunt ut. Etiam sed odio risus. Maecenas rhoncus felis quis augue molestie, quis commodo eros suscipit. Mauris hendrerit
-					magna ac mauris accumsan ultricies. Pellentesque tristique at turpis sed sollicitudin. Etiam ultrices faucibus blandit.
-					Nunc blandit nulla.
-				</p>
-			</article>
-			<aside>aside
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
-					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat. Cras risus felis, posuere vitae pellentesque
-					et, imperdiet non orci. Duis fringilla mi et risus luctus iaculis. Aliquam posuere congue neque, non ullamcorper ipsum
-					tincidunt ut. Etiam sed odio risus. Maecenas rhoncus felis quis augue molestie, quis commodo eros suscipit. Mauris hendrerit
-					magna ac mauris accumsan ultricies. Pellentesque tristique at turpis sed sollicitudin. Etiam ultrices faucibus blandit.
-					Nunc blandit nulla a arcu convallis pharetra.
-				</p>
-			</aside>
+		<header>
+			<h1>header</h1>
+		</header>
+		<nav>
+			<h3>nav (left)</h3>
+			<ul>
+				<li><a href="#">go here 1</a></li>
+				<li><a href="#">go here 2</a></li>
+				<li><a href="#">go here 3</a></li>
+				<li><a href="#">go here 4</a></li>
+			</ul>
+		</nav>
+		<main id='index'>
+			<section>
+				<h2>section 1</h2>
+				<article>
+					<h2>article 1</h2>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
+			<section>
+				<h2>section 2</h2>
+				<article>
+					<h2>article 2</h2>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
 		</main>
-		<footer>footer</footer>
+		<aside>
+			<h3>aside (right)</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+				a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+			</p>
+		</aside>
+		<footer>
+			<h3>footer</h3>
+		</footer>
 	</div>
 </body>
 
