added various font sizes as per google webdoc. used lighter version of source sans pro. no text in ul tags

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<title>a e</title>
 	<base href="" target="_blank" />
-	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<script src="js/main.js"></script>
 </head>
@@ -15,10 +15,10 @@
 		<header>
 			<h1>header</h1>
 		</header>
-		<nav>
+		<nav>nav
 			<h3>nav (left)</h3>
 			<ul>
-				<li><a href="#">go here 1</a></li>
+				<li>li<a href="#">go here 1</a></li>
 				<li><a href="#">go here 2</a></li>
 				<li><a href="#">go here 3</a></li>
 				<li><a href="#">go here 4</a></li>
