some commenting to better separate main pages

--- a/index.htm
+++ b/index.htm
@@ -22,9 +22,12 @@
 				<li class="secret reveal3"><a href="#" target="_self">secret</a></li>
 			</ul>
 		</nav>
+		
 		<header class="reveal2">
 			<h1>header</h1>
 		</header>
+
+		<!--home-->
 		<main class="home reveal3 active">
 			<nav class="map">
 				nav map
@@ -50,6 +53,8 @@
 				</p>
 			</aside>
 		</main>
+
+		<!--projects-->
 		<main class="projects reveal3">
 			<section>
 				<h2>projects section 1</h2>
@@ -62,6 +67,8 @@
 				</article>
 			</section>
 		</main>
+
+		<!--secret-->
 		<main class="secret reveal3">
 			<section>
 				<h2>secret section 1</h2>
@@ -74,6 +81,7 @@
 				</article>
 			</section>
 		</main>
+
 		<footer class="reveal3">
 			<h3>footer</h3>
 		</footer>
