added multiple main.home section/aside entries that toggle when nav.map view more details box clicked

--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
 					</p>
 				</aside>
 			</nav>
-			<section>
+			<section class="date1 active">
 				<h2>home section 1</h2>
 				<article>
 					<h2>article 1</h2>
@@ -46,8 +46,40 @@
 					</p>
 				</article>
 			</section>
-			<aside>
-				<h3>home aside (right)</h3>
+			<aside class="date1 active">
+				<h3>home aside 1 (right)</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+				</p>
+			</aside>
+			<section class="date2">
+				<h2>home section 2</h2>
+				<article>
+					<h2>article 2</h2>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
+			<aside class="date2">
+				<h3>home aside 2 (right)</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+				</p>
+			</aside>
+			<section class="date3">
+				<h2>home section 3</h2>
+				<article>
+					<h2>article 3</h2>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
+						a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
+					</p>
+				</article>
+			</section>
+			<aside class="date3">
+				<h3>home aside 3 (right)</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet ut massa ac pellentesque. Nulla facilisi. Proin
 					a lacinia quam, vel ultrices eros. Suspendisse dictum lacinia eros quis placerat.
 				</p>
